--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.link-btn {
+  transition: all 0.1s ease-in;
+}
+
+.link-btn:hover {
+  transform: scale(1.12);
+}
+
+.name-text {
+  background-image: linear-gradient(to right, black, white 200%);
+  background-clip: text;
+  color: transparent;
+}
+
+.border-h {
+  border-width: 2px;
+  border-color: #c0c0c0;
+  border-radius: 0.375rem;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+.main-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: url(one-direction-bg.jpeg);
+  /* blur the background image */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: blur(8px);
 }
